--- a/index.html
+++ b/index.html
@@ -1,12 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
 <link rel="stylesheet" type="text/css" href="styles.css">
-<script type="text/javascript" src="script.js"></script>
 <head>
+
 	<meta charset="UTF-8">
 	<title>Document</title>
+
 </head>
+
 <body>
+
+<table id=Table>
+	<tr>
+		<th> Fahrenheit </th>
+		<th> Celcius </th>
+	</tr>
+</table>
 	
 </body>
+<script type="text/javascript" src="magic.js">
+</script>
+
 </html>
