--- a/index.html
+++ b/index.html
@@ -9,14 +9,23 @@
 </head>
 
 <body>
+	<h1 id=Title> Fahrenheit to Celcius! </h1>
 
-<table id=Table>
-	<tr>
-		<th> Fahrenheit </th>
-		<th> Celcius </th>
-	</tr>
-</table>
+	<table id=Table>
+		<tr>
+			<th> Fahrenheit </th>
+			<th> Celcius </th>
+		</tr>
+	</table>
+
+	<img id="Wow" src="https://pics.me.me/such-wow-much-awesome-many-cool-bestest-thug-life-19337110.png" alt="Much Wow">
+
+	<img id="Much-Wow" src="https://pbs.twimg.com/profile_images/610483331835138048/IDgENeX7.png" alt="Corn Dog Much Wow">
 	
+	<img id="REEE" src="https://ih0.redbubble.net/image.419516983.6536/flat,800x800,075,f.jpg" alt="REEEEEEEEE!">
+
+	<p id="words"> REEEEEEEEEEEEEEEEEEEEEEEEE! </p>
+
 </body>
 <script type="text/javascript" src="magic.js">
 </script>
