--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
 </head>
 
 <body>
-	<h1 id=Title> Fahrenheit to Celcius! </h1>
+	<h1 id=Title> Fahrenheit to Celsius! </h1>
 
 	<table id=Table>
 		<tr>
 			<th> Fahrenheit </th>
-			<th> Celcius </th>
+			<th> Celsius </th>
 		</tr>
 	</table>
 
