--- a/index.html
+++ b/index.html
@@ -26,6 +26,20 @@
 
 	<p id="words"> REEEEEEEEEEEEEEEEEEEEEEEEE! </p>
 
+	<!--
+	<div id="Fah">
+		Fahrenheit: <input type="text" name="Fahrenheit">
+	</div>
+
+	<div id="Cel">
+		Celsius: <input id="cel" type="text" name="Celsius">
+	</div>
+
+	<div id="Int">
+		Intervals: <input id="int" type="text" name="Intervals">
+	</div> 
+-->
+
 </body>
 <script type="text/javascript" src="magic.js">
 </script>
